# Vigil-AnthropicxLightspeedxAbridge-Hackathon

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: tuned.env
data/: demo_cohort.json  face_gallery.json
data/faces/: map.json
intake-app/: .env.example  README.md  app.py  index.html  requirements.txt  sample_cohort.json  triage.py  voice.py
scripts/: analyze_seizure.py  calibrate_scream.py  calibrate_seizure.py  demo_seizure.py  download_fall_model.py  enroll_faces.py  extract_demo_cohort.py  grant_camera.py  preflight.py  serve_public.py  setup_elevenlabs.py  synth_cohort.py  test_scream.py  test_vision.py  triage_intake.py  tune.py
supabase/: schema.sql
tests/: test_call_gate.py  test_core.py  test_initial_triage.py  test_product_layer.py  test_realtime.py  test_vision_scenarios.py
vigil/: __init__.py  chart.py  config.py  demo.py  events.py  intake.py  monitoring.py  security.py
vigil/dashboard/: fonts.css  index.html  intake.html
vigil/documentation/: __init__.py  abridge_note.py
vigil/escalation/: __init__.py  elevenlabs_call.py  ladder.py  openai_realtime.py  twilio_call.py
vigil/perception/: __init__.py  audio.py  faces.py  fusion.py  vision.py
vigil/reasoning/: __init__.py  initial_triage.py  prompts.py  rules.py  triage.py  voice_intake.py
vigil/server/: __init__.py  app.py  bus.py  command_api.py  status.py  supabase_sink.py
vigil/tuning/: __init__.py  audio_tune.py  face_tune.py  fusion_tune.py  optimizer.py  reasoning_tune.py  vision_tune.py
web/: .env.example  package.json  pnpm-lock.yaml
web/app/: AgentPipeline.tsx  BackendFeed.tsx  DashboardNav.tsx  VoiceIntake.tsx  demoSession.ts  globals.css  layout.tsx  page.tsx  useRoleSession.ts
web/app/clinical/: ClinicalDashboard.tsx  page.tsx
web/app/front-desk/: page.tsx
web/app/lib/: supabase.ts  useVigilBackend.ts
web/app/nurse/: page.tsx
web/app/operations/: page.tsx
web/app/security/: page.tsx
web/app/trust/: page.tsx
