[project]
name = "vigil"
version = "0.1.0"
description = "Vigil — a continuous re-triage agent for clinic and ER waiting rooms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "opencv-python>=4.10",
    "ultralytics>=8.3",
    "numpy>=1.26",
    "sounddevice>=0.4.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "elevenlabs>=1.9",
]

[project.optional-dependencies]
# Audio scream detection. Final choice confirmed by the integration-research pass;
# YAMNet (AudioSet "Screaming"/"Shout" classes) via TF-Hub is the default,
# with an energy+spectral heuristic fallback that needs no heavy deps.
audio = ["tensorflow>=2.16", "tensorflow-hub>=0.16", "librosa>=0.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vigil"]

[tool.ruff]
line-length = 100
target-version = "py312"
