[project]
name = "vigil"
version = "0.1.0"
description = "Vigil — a continuous re-triage agent for clinic and ER waiting rooms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "opencv-python>=4.10",
    "ultralytics>=8.3",
    "lapx>=0.5",  # linear-assignment solver required by YOLO's ByteTrack tracker
    "numpy>=1.26",
    "sounddevice>=0.4.7",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",  # multipart form parsing for the /intake audio upload
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "elevenlabs>=1.9",
]

[project.optional-dependencies]
# Audio scream detection. The Audio Spectrogram Transformer (AST) fine-tuned on
# AudioSet is a real learned event classifier — SOTA open-source, runs on the torch
# YOLO already pulls in (no TensorFlow, no torchaudio). Watches the AudioSet
# human-distress classes (Screaming/Shout/Yell/...).
audio = ["transformers>=4.40"]
# On-device face recognition: bind a detected face to its patient chart.
faces = ["insightface>=0.7.3", "onnxruntime>=1.17"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vigil"]

[tool.ruff]
line-length = 100
target-version = "py312"
